--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,8 @@
 # .coveragerc to control coverage.py for the package
 [run]
 branch = True
-source = demo.cmd
-omit = 
+source = demo.src
+omit =
     */test/*
     */__init__.py
 
